<resources>
    <string name="app_name">Book Pal</string>
    <string name="welcome_to_book_pal">Welcome to Book Pal</string>
    <string name="new_user_signup">New User? <b>SignUp</b></string>
    <string name="forgot_password_recover">Forgot Password? <b>Recover</b></string>
    <string name="name_book_add">Name</string>
    <string name="genre_book_add">Genre</string>
    <string name="author_book_add">Author</string>
    <string name="submitbtn_book_add">Update</string>
    <string name="edit_book_book_add">Edit Book</string>
    <string name="genre_book_details">Genre</string>
    <string name="book_details_book_details">Book Details</string>
    <string name="book_title_book_details">Book Title</string>
    <string name="by_book_details">by</string>
    <string name="j_r_r_tolkien_book_details">J.R.R Tolkien</string>
    <string name="quotes_book_details">Quotes</string>
    <string name="already_read_btn_book_details">Already Read</string>
    <string name="currently_reading_btn_book_details">Currently Reading</string>
    <string name="want_to_read_book_details">Want To Read</string>
    <string name="add_favorite_book_details">Add Favorite</string>
    <string name="edit_book_book_edit">Edit Book</string>
    <string name="name_book_edit">Name</string>
    <string name="genre_book_edit">Genre</string>
    <string name="author_book_edit">Author</string>
    <string name="submit_book_edit">Submit</string>
    <string name="favorite_books_book_list_fav">Favorite Books</string>
    <string name="search_bl_fav">Search</string>
    <string name="books_bl_lib">Books</string>
    <string name="search_bl_lib">Search</string>
    <string name="my_books_book_list">My Books</string>
    <string name="search_book_list">Search</string>
    <string name="user_book_list">User</string>
    <string name="abc_example_com_book_list">abc@example.com</string>
    <string name="my_books_dashboard">My Books</string>
    <string name="favorites_dashboard">Favorites</string>
    <string name="already_read_dashboard">Already Read</string>
    <string name="currently_reading_dashboard">Currently Reading</string>
    <string name="want_to_read_dashboard">Want To Read</string>
    <string name="forgot_password_forgot_pass">Forgot Password?</string>
    <string name="enter_you_registered_email_to_receive_instructions_forgot_pass">Enter you registered email to receive instructions to rese you password.</string>
    <string name="email_forgot_pass">Email</string>
    <string name="submit_forgot_pass">Submit</string>
    <string name="please_login_login">Please Login</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login_login">Login</string>
    <string name="login_main">Login</string>
    <string name="signup_main">Sign Up</string>
    <string name="edit_profile_profile">Edit Profile</string>
    <string name="name_profile">Name</string>
    <string name="update_profile">Update</string>
    <string name="favorite_quotes_quotelist">Favorite Quotes</string>
    <string name="search_quotelist">Search</string>
    <string name="sign_up_signup">Sign Up</string>
    <string name="add_quote_addquote">Add Quote</string>
    <string name="quote_addquote">Quote</string>
    <string name="page_number_addquote">Page Number</string>
    <string name="submit_addquote">Submit</string>
    <string name="book_title_bookrow">Book Title</string>
    <string name="genre_bookrow">Genre:</string>
    <string name="fantasy_bookrow">Fantasy</string>
    <string name="author_bookrow">Author:</string>
    <string name="the_quote_of_the_user_which_can_be_of_multiple_lines_quoterow">The quote of the user which can be of multiple lines.</string>
    <string name="page_quoterow">Page:</string>
    <string name="_133_quoterow">133</string>
    <string name="dd_mm_yyyy_quoterow">dd/MM/yyyy</string>
</resources>