<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DashboardActivity">


    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/profile_btn_padding_book_list"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_person_white" />

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/title_margin_top_book_list"
            android:text="@string/user_book_list"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/subTitleTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_centerHorizontal="true"
            android:text="@string/abc_example_com_book_list"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/logout_padding_book_list"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logout_white" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="@dimen/logo_iv_width_dasbhoard"
        android:layout_height="@dimen/logo_iv_height_dashboard"
        android:layout_below="@+id/toolbarRl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_iv_margin_top_dashboard"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoIv"
        android:orientation="vertical"
        android:padding="@dimen/linlayout_padding_dashboard">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/myBooksBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/my_books_min_height_dashboard"
            android:text="@string/my_books_dashboard"
            app:cornerRadius="@dimen/my_books_btn_corner_radius_dashboard"
            app:icon="@drawable/ic_dashboard_my_books" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoritesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/favbtn_min_height_dashboard"
            android:text="@string/favorites_dashboard"
            app:cornerRadius="@dimen/favbtn_corner_radius_dashboard"
            app:icon="@drawable/ic_dashboard_favorite" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alreadyReadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/already_read_btn_min_height_dashboard"
            android:text="@string/already_read_dashboard"
            app:cornerRadius="@dimen/alreadybtn_corner_radius_dashboard"
            app:icon="@drawable/ic_dashboard_already_read" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currentlyReadingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/currently_reading_min_height_dashboard"
            android:text="@string/currently_reading_dashboard"
            app:cornerRadius="@dimen/curbtn_corner_radius_dashboard"
            app:icon="@drawable/ic_dashboard_currently_reading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wantToReadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/wantbtn_min_height_dashboard"
            android:text="@string/want_to_read_dashboard"
            app:cornerRadius="@dimen/wantbtn_corner_radius_dashboard"
            app:icon="@drawable/ic_dashboard_want_to_read" />

    </LinearLayout>

</RelativeLayout>