<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_cr_quoterow"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/card_cp_quoterow">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/quoteTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/favoriteBtn"
            android:text="@string/the_quote_of_the_user_which_can_be_of_multiple_lines_quoterow" />


        <ImageButton
            android:id="@+id/favoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/favbtn_padding_quoterow"
            android:src="@drawable/ic_favorite_outline" />

        <TextView
            android:id="@+id/quotePageNumberLabelTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quoteTv"
            android:layout_marginTop="@dimen/pagelabel_margin_top_quoterow"
            android:text="@string/page_quoterow" />


        <TextView
            android:id="@+id/quotePageNumberTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quoteTv"
            android:layout_marginTop="@dimen/pagenumber_margin_top_quoterow"
            android:layout_toEndOf="@id/quotePageNumberLabelTv"
            android:text="@string/_133_quoterow" />

        <TextView
            android:id="@+id/dateTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quoteTv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:text="@string/dd_mm_yyyy_quoterow" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>