<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_back_search"
    android:padding="20dp">


    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/back_padding"
        android:src="@drawable/ic_back_black" />

    <TextView
        android:id="@+id/titleTv"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:padding="@dimen/title_padding_addquote"
        android:text="@string/add_quote_addquote"
        android:textAlignment="center" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quoteTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backBtn"
        android:layout_marginTop="@dimen/quote_addquote"
        android:hint="@string/quote_addquote"
        app:boxCornerRadiusTopEnd="@dimen/tilcr_end_addquote"
        app:boxCornerRadiusTopStart="@dimen/tilcr_start_addquote"
        app:startIconDrawable="@drawable/ic_twotone_comment_black">

        <EditText
            android:id="@+id/quoteEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pageNumberTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quoteTil"
        android:layout_marginTop="@dimen/numtil_margin_top_addquote"
        android:hint="@string/page_number_addquote"
        app:boxCornerRadiusTopEnd="@dimen/tilcr_start_addquote"
        app:boxCornerRadiusTopStart="@dimen/tilcr_end_addquote"
        app:startIconDrawable="@drawable/ic_twotone_comment_black">

        <EditText
            android:id="@+id/pageNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pageNumberTil"
        android:layout_marginTop="@dimen/submit_margin_top_addquote"
        android:minHeight="@dimen/submitbtn_min_height_addquote"
        android:text="@string/submit_addquote"
        app:cornerRadius="@dimen/submit_cr_addquote"
        app:icon="@drawable/ic_login_black"/>

</RelativeLayout>