<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookDetailsActivity">


    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/imagebtn_padding_book_details"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/toolbarTitleTv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/book_details_book_details"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/toolbarEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/toolbarDeleteBtn"
            android:background="@android:color/transparent"
            android:padding="@dimen/imagebtn_padding_book_details"
            android:src="@drawable/ic_edit_book_white" />

        <ImageButton
            android:id="@+id/toolbarDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/imagebtn_padding_book_details"
            android:src="@drawable/ic_delete_book_white" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomOptionsLl"
        android:layout_below="@id/toolbarRl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/bookIv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_iv_book_details"
                android:layout_marginTop="@dimen/layout_margin_top_iv_book_details"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_book_gray" />

            <TextView
                android:id="@+id/genreTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/genre_tv_margin_top_book_details"
                android:text="@string/genre_book_details"
                android:textAlignment="center"
                android:textColor="@color/teal_200" />

            <TextView
                android:id="@+id/titleTv"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title_book_details"
                android:textAlignment="center" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/authorLabelTv"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_book_details"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/authorTv"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/j_r_r_tolkien_book_details"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_lay_height_book_details"
                android:layout_marginTop="@dimen/view_lay_margin_top_book_details"
                android:layout_marginBottom="@dimen/view_margin_bottom_book_details"
                android:background="@drawable/shape_line_bg" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/quotes_padding_book_details"
                    android:text="@string/quotes_book_details" />


                <ImageButton
                    android:id="@+id/addQuoteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/imgbtn_padding_book_details"
                    android:src="@drawable/ic_comment_add" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/quotesRv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/addQuoteBtn"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_quote" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottomOptionsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_start_linear_layout_book_details"
        android:layout_marginEnd="@dimen/margin_end_linear_layout_book_details"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alreadyReadBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/already_read_btn_margin_end_book_details"
            android:layout_weight="1"
            android:text="@string/already_read_btn_book_details"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_already_read_btn"
            app:cornerRadius="@dimen/already_read_btn_corner_radius_book_details"
            app:icon="@drawable/ic_dashboard_already_read"
            app:iconGravity="start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currentlyReadingBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/layout_margin_end_currently_reading_book_details"
            android:layout_weight="1"
            android:text="@string/currently_reading_btn_book_details"
            android:textAllCaps="false"
            android:textSize="@dimen/curr_reading_btn_text_size_book_details"
            app:cornerRadius="@dimen/cur_reading_btn_corner_radius_book_details"
            app:icon="@drawable/ic_dashboard_currently_reading"
            app:iconGravity="start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wantToReadBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/layout_margin_end_wantbtn_book_details"
            android:layout_weight="1"
            android:text="@string/want_to_read_book_details"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_want_to_read_book_details"
            app:cornerRadius="@dimen/corner_radius_wantbtn_book_details"
            app:icon="@drawable/ic_dashboard_want_to_read"
            app:iconGravity="start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoriteBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_favorite_book_details"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_favoritebtn_book_details"
            android:visibility="gone"
            app:cornerRadius="@dimen/corner_radius_favbtn_book_details"
            app:icon="@drawable/ic_favorite_outline"
            app:iconGravity="top" />

    </LinearLayout>

</RelativeLayout>