<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rel_layout_height_forgot_pass"
        android:background="@drawable/shape_toolbar01">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backFab"
            android:layout_width="wrap_content"
            app:tint="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/back_marg_forgot_pass"
            android:layout_marginTop="@dimen/back_marg_forgot_pass"
            android:layout_marginEnd="@dimen/back_marg_forgot_pass"
            android:layout_marginBottom="@dimen/back_marg_forgot_pass"
            android:src="@drawable/ic_back_black"
            app:fabSize="mini" />

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="@dimen/icon_iv_forgot_pass"
            android:layout_height="@dimen/icon_iv_forgot_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/icon_iv_margin_top_forgot_pass"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margintop_title_forgot_pass"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/forgot_password_forgot_pass"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/subTitleTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/enter_you_registered_email_to_receive_instructions_forgot_pass"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/sv_margin_start_forgot_pass"
        android:layout_marginTop="@dimen/sv_margin_top_forgot_pass"
        android:layout_marginEnd="@dimen/sv_margin_end_forgot_pass">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_forgot_pass"
                app:boxCornerRadiusTopEnd="@dimen/emailtil_corner_radius_top_end_forgot_pass"
                app:boxCornerRadiusTopStart="@dimen/emailtil_corner_radius_top_start_forgot_pass"
                app:startIconDrawable="@drawable/ic_twotone_email_black">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="@dimen/submitbtn_margin_top_forgot_pass"
                android:minHeight="@dimen/submitbtn_min_height_forgot_pass"
                android:text="@string/submit_forgot_pass"
                app:cornerRadius="@dimen/submit_btn_corner_radius_forgot_pass"
                app:icon="@drawable/ic_twotone_email_instructions_black" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>